--- a/public/contact.html
+++ b/public/contact.html
@@ -295,5 +295,7 @@
 		</footer>
 
 		<script src="script.js"></script>
+		<script src="messenger.js"></script>
+		<script defer src="messenger-plugin.js"></script>
 	</body>
 </html>
