--- a/public/index.html
+++ b/public/index.html
@@ -182,5 +182,13 @@
 		</footer>
 
 		<script src="script.js"></script>
+		<script src="messenger.js"></script>
+		<script defer src="messenger-plugin.js"></script>
+		<script defer>
+			window.openPaths = [
+				'/about/organizational/our-history',
+				'/about/community/youth-center',
+			]
+		</script>
 	</body>
 </html>
