--- a/public/services.html
+++ b/public/services.html
@@ -345,5 +345,7 @@
 		</footer>
 
 		<script src="script.js"></script>
+		<script src="messenger.js"></script>
+		<script defer src="messenger-plugin.js"></script>
 	</body>
 </html>
